[metadata]
name = x23101082_car_insurance
version = 1.0.2
author = himavanthraavi23
author_email = himavanthraavi23@gmai.com
description = Car Insurance Library
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url=https://github.com/raavihimavanth23/x23101083_carinsurance
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
